VERY URGENT!! - Fix the issue of pages not showing any content when unknown parameter is added at the end 1. Added on-hold notification 2. Added on-hold page

--- a/prize-site/css/v1/index.css
+++ b/prize-site/css/v1/index.css
@@ -391,6 +391,50 @@
     min-height: 120px;
 }
 
+#query-success-alert {
+    display: none;
+}
+
+#query-error-alert {
+    display: none;
+}
+
+#onhold-notification {
+    position:fixed;
+    bottom:0;
+    right:0;
+    margin-right: 10px;
+    color: black;
+}
+
+#onhold-page {
+    text-align: center;
+    margin-top: 6%;
+    height: 100%;
+}
+.error-template
+{
+    padding: 40px 15px;
+    text-align: center;
+}
+.error-actions
+{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.error-actions .btn
+{
+    margin-right: 10px;
+}
+.message-box h1
+{
+    color: #252932;
+    font-size: 98px;
+    font-weight: 700;
+    line-height: 98px;
+    text-shadow: rgba(61, 61, 61, 0.3) 1px 1px, rgba(61, 61, 61, 0.2) 2px 2px, rgba(61, 61, 61, 0.3) 3px 3px;
+}
+
 @media screen and (min-width: 768px) {
     #past-winners-content {
         padding-right: 0%;
